<resources>
    <string name="app_name">Agenda</string>
    <string name="search_hint">Buscar contato</string>
    <string name="title_activity_detalhe">Novo contato</string>
    <string name="nome_do_contato">Nome do contato</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="nome">Nome</string>
    <string name="fone">Fone</string>
    <string name="fone_adicional">Fone adicional</string>
    <string name="email">Email</string>
    <string name="bt_menos"> - </string>
    <string name="bt_mais"> + </string>
    <string name="aniversario"> Aniversário(MM/YYYY) </string>
</resources>


