<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordlayoutdetalhe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="br.edu.ifspsaocarlos.agenda.activity.DetalheActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome">
        </TextView>


        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </EditText>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" >
        </TextView>
        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </EditText>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fone">
        </TextView>
        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone">
        </EditText>
        <TextView
            android:id="@+id/tv_fone_adicional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fone_adicional"/>
        <EditText
            android:id="@+id/et_fone_adicional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>
        <TextView
            android:id="@+id/tv_aniversario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aniversario"/>
        <EditText
            android:id="@+id/et_aniversario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>

